# InfiniTensor

./: .clang-format  .cmake-format.json  .env.sh.swp  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  INSTALL_GUIDE_CN.md  Makefile  README.md  README_CN.md  SUPPORT_MATRIX_CN.md  TEST_REPORT_CN.md  USER_GUIDE_CN.md  env.sh  install_cuda.sh  run.sh  run_model.py  test_operator_cuda.sh  test_runtime_cuda.sh
.github/workflows/: build.yml  build_win.yml  clang-format-check.yml
InfiniTest/: README.md  demo.py  pyproject.toml
InfiniTest/Device/: device.cpp
InfiniTest/src/InfiniTest/: __init__.py  accuracy.py  base_operator.py  dump.py  operator.proto  operator_pb2.py  performance.py  pytorch_operator.py  utils.py
InfiniTest/test/: add.py  conv.py  matmul.py  sigmoid.py  transpose.py  unary.py
InfiniTest/test/add/: 2023_05_16_10_56_20_797325.prototxt  2023_05_16_10_58_32_093778.prototxt  2023_05_16_11_09_45_101017.prototxt  2023_05_16_11_23_55_074101.prototxt  2023_05_16_11_23_55_075450.prototxt  2023_05_16_11_23_55_075895.prototxt  2023_05_16_11_23_55_076327.prototxt  2023_05_16_11_23_55_076756.prototxt  2023_05_16_11_23_55_077216.prototxt  2023_05_16_11_23_55_077642.prototxt  2023_05_16_11_23_55_078065.prototxt  2023_05_16_11_23_55_078490.prototxt  2023_05_16_11_23_55_078913.prototxt  2023_05_16_11_25_32_748806.prototxt  2023_05_16_11_25_32_749717.prototxt  2023_05_16_11_25_32_750170.prototxt  2023_05_16_11_25_32_750617.prototxt  2023_05_16_11_25_32_751046.prototxt  2023_05_16_11_25_32_751473.prototxt  2023_05_16_11_25_32_751895.prototxt  2023_05_16_11_25_32_752316.prototxt  2023_05_16_11_25_32_752742.prototxt  2023_05_16_11_25_32_753208.prototxt  2023_05_16_13_26_42_415283.prototxt  2023_05_16_13_26_42_416613.prototxt  2023_05_16_13_26_42_417074.prototxt  2023_05_16_13_26_42_417514.prototxt  2023_05_16_13_26_42_417960.prototxt  2023_05_16_13_26_42_418389.prototxt  2023_05_16_13_26_42_418829.prototxt  2023_05_16_13_26_42_419260.prototxt  2023_05_16_13_26_42_419685.prototxt  2023_05_16_13_26_42_420143.prototxt  2023_05_16_13_41_36_755687.prototxt  2023_05_16_13_41_36_757021.prototxt  2023_05_16_13_41_36_757466.prototxt  2023_05_16_13_41_36_757899.prototxt  2023_05_16_13_41_36_758325.prototxt  2023_05_16_13_41_36_758750.prototxt  2023_05_16_13_41_36_759173.prototxt  (+17 more)
InfiniTest/test/conv/: 2023_05_22_14_22_19_159792.prototxt
InfiniTest/test/matmul/: 2023_05_17_14_56_52_579207.prototxt  2023_05_18_13_53_33_789574.prototxt
InfiniTest/test/sigmoid/: 2023_05_18_14_20_41_171503.prototxt
InfiniTest/test/transpose/: 2023_05_18_13_46_36_063573.prototxt
InfiniTest/test/unary/: relu_2023_05_23_11_23_35_930040.prototxt
cmake/: FindCNCL.cmake  FindXCCL.cmake  config_debugTVM.cmake  config_lotus_TVM.cmake
docs/: INDEX.md  INFINIOPS_KERNEL_MIGRATION_CN.md  INSTALL_GUIDE_CN.md  INSTALL_GUIDE_WINDOWS_CN.md  SUPPORT_MATRIX_CN.md  USER_GUIDE_CN.md  infiniops_kernel_baseline.txt  infiniops_kernel_coverage.json
eval_pfusion/: eval_kernel.py  eval_kernel.tmp  eval_sar_drn.sh  eval_sar_drn_0.cu  eval_sar_drn_1.cu  eval_sar_drn_2.cu  eval_transpose.cu  eval_transpose.py  eval_transpose.sh  eval_transpose.tmp
example/DenseNet/: densenet.py
example/Inception/: inceptionv3.py  inceptionv4.py
example/ResNet/: resnet.py
examples/: launch.py
examples/distributed/: README.md  ascend_launch.py  bang_launch.py  bang_launch2.py  cuda_launch.py  kunlun_launch.py  (+10 more)
generated_code/: bert_0.cu  bias_0.cu  bias_1.cu  bias_2.cu  bias_3.cu  reduce_mean.cu  sar_drn_0.cu  sar_drn_1.cu  test.cu  tmp.cu  transpose.cu  transpose_0.cu  transpose_1.cu  transpose_2.cu
include/: benchmark.h  custom_ops.cuh  custom_ops.h  test.h  wcz112.code-workspace
infini_mlir/: CMakeLists.txt
infini_mlir/Dialect/: CMakeLists.txt
infini_mlir/Dialect/include/: InfiniOps.h  InfiniOps.td
infini_mlir/Dialect/src/: CMakeLists.txt  InfiniOps.cc
infini_mlir/Translation/: CMakeLists.txt
infini_mlir/Translation/include/: ConvertToInfini.h  ConvertToMLIR.h  transform.h  utils.h
infini_mlir/Translation/src/: ConvertToInfini.cc  ConvertToMLIR.cc  transform.cc  utils.cc
infini_mlir/include/Dialect/: CMakeLists.txt  InfiniOps.h  InfiniOps.td
infini_mlir/src/: CMakeLists.txt  InfiniOps.cc
optimization/: CMakeLists.txt  Makefile
optimization/include/optimization/: common.h
optimization/src/: data.h  data_type.cc  data_type.h  graph.cc  graph.h  mutation.cc  mutation.h  op_type.h  tensor.cc  tensor.h
optimization/src/operator/: conv.h
optimization/src/pass/: single_operator.cc  single_operator.h
optimization/src0/: data.h  data_type.h  graph.h  op_type.h
optimization/test/: test.cpp
proto/: data.proto  tensor.proto
pyinfinitensor/: README.md  pyproject.toml  setup.py
pyinfinitensor/src/pyinfinitensor/: __init__.py  infini.py  model_infer.py  onnx.py  onnx_bak.py  tensorrt_backend.py  utils.py
pyinfinitensor/src/pyinfinitensor/operators/: argmax.py  batch_normalization.py  binary.py  cast.py  celu.py  clip.py  compair.py  concat.py  conv.py  conv_transpose.py  det.py  dropout.py  expand.py  flatten.py  gather.py  gemm.py  globalpool.py  gru.py  matmul.py  pad.py  pool.py  reduce.py  reshape.py  resize.py  selu.py  shrink.py  slice.py  split.py  squeeze.py  transpose.py  unary.py  unsqueeze.py
pyinfinitensor/tests/: export_onnx.py  test_api.py  test_model.py  test_onnx.py  test_onnxstub.py  test_run.py  test_use.py
pyinfinitensor/tests/models/: drn.py
scripts/: audit_infiniops_coverage.py  format.py  generate_infiniops_kernels.py  infiniops_op_mapping.yaml
src/: custom_ops.cu
src/kernels/ascend/plugin/: CMakeLists.txt  Makefile  demo_add.cc_bak  demo_add.cce  demo_add.cce_bak  main.h  plugin  plugin.cc_bak  plugin.cce  plugin.cpp  plugin.h  plugin_sub.cc
src/kernels/mlu/: CMakeLists.txt
src/kernels/mlu/include/: bangSoftmax.h  bang_div.h  bang_highSoftmax.h  div.h  highSoftmax.h
src/kernels/mlu/src/: bangSoftmax.mlu  bangSoftmax_device.mlu  bangTopK.mlu  div.mlu  div_device.mlu  highSoftmax.mlu  highSoftmax_device.mlu  rmsNorm.mlu
try/: CMakeLists.txt  Makefile  README.md
(+1624 files in other folders)
